Add some required fixtures

--- a/test/fixtures/cities.yml
+++ b/test/fixtures/cities.yml
@@ -5,3 +5,11 @@
 
 # two:
 #   name: MyString
+
+bandung:
+  name: Kota Bandung
+  province: westjava
+
+cimahi:
+  name: Kota Cimahi
+  province: westjava
