--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -19,7 +19,7 @@ anonymous:
   perishable_token: <%= Authlogic::Random.friendly_token %>
 
 theuser:
-  email: theuser@email.com
+  email: user@mail.com
   password_salt: <%= salt = Authlogic::Random.hex_token %>
   crypted_password: <%= Authlogic::CryptoProviders::BCrypt.encrypt('asdqwe123' + salt) %>
   persistence_token: <%= Authlogic::Random.hex_token %>
