--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -11,6 +11,7 @@
 #  column: value
 
 anonymous:
+  name: Anonymous
   email: anon@ymous.com
   password_salt: <%= salt = Authlogic::Random.hex_token %>
   crypted_password: <%= Authlogic::CryptoProviders::BCrypt.encrypt('asdqwe123' + salt) %>
@@ -19,6 +20,7 @@ anonymous:
   perishable_token: <%= Authlogic::Random.friendly_token %>
 
 theuser:
+  name: User Mail
   email: user@mail.com
   password_salt: <%= salt = Authlogic::Random.hex_token %>
   crypted_password: <%= Authlogic::CryptoProviders::BCrypt.encrypt('asdqwe123' + salt) %>
